# Final_Project_Kernel_Rebooters

./: .gitignore  CMakeLists.txt  README.md  main_NOTES.md
Final_project_proposal/train_healthy_photos/daisy/templates/: daisy_healthy_1.xcf  daisy_healthy_2.xcf  daisy_healthy_3.xcf  daisy_healthy_4.xcf  daisy_healthy_5.xcf
Final_project_proposal/train_healthy_photos/dandelion/templates/: dandelion_healthy_1.xcf  dandelion_healthy_2.xcf  dandelion_healthy_3.xcf  dandelion_healthy_4.xcf  dandelion_healthy_5.xcf
Final_project_proposal/train_healthy_photos/roses/templates/: roses_healthy_1.xcf  roses_healthy_2.xcf  roses_healthy_3.xcf  roses_healthy_4.xcf  roses_healthy_5.xcf
Final_project_proposal/train_healthy_photos/sunflowers/templates/: sunflower_healthy_1.xcf  sunflower_healthy_2.xcf  sunflower_healthy_3.xcf  sunflower_healthy_4.xcf  sunflower_healthy_5.xcf
Final_project_proposal/train_healthy_photos/tulips/templates/: tulip_healthy_1.xcf  tulip_healthy_2.xcf  tulip_healthy_3.xcf  tulip_healthy_4.xcf  tulip_healthy_5.xcf
docs/: Makefile  README.md  report.tex
include/: bow.h  flower_image.hpp  flower_image_container.hpp  flower_template.hpp  flower_type.hpp  hog.h  matching.h  metrics.h  orb.h  orb_processing.h  preprocessing.hpp  print_stats.h  sift.h  sift_processing.h  surf.h  surf_processing.h  template_match.hpp  template_match_processing.hpp
results/: bow_recap.txt  hog_recap.txt  orb_recap.txt  sift_recap.txt  surf_recap.txt  tm_recap.txt
src/: bow.cpp  flower_image.cpp  flower_image_container.cpp  flower_template.cpp  flower_type.cpp  hog.cpp  main.cpp  matching.cpp  metrics.cpp  orb.cpp  orb_processing.cpp  preprocessing.cpp  print_stats.cpp  sift.cpp  sift_processing.cpp  surf.cpp  surf_processing.cpp  template_match.cpp
